fix navbar button alignment

--- a/public/style.css
+++ b/public/style.css
@@ -125,7 +125,7 @@ img {
 
 .header-buttons .btn {
     height: 40px !important;
-    line-height: 34px !important;
+    line-height: 40px !important;
     padding: 0 14px !important;
 }
 
